Post processing tests v2 (#70)
* added some post processing

* added files to git

* added cne zipping and cgm zipping

* export metadata

* few fixes

* fixed xml generation

* generate zipped logs

* rename RAO_OUTPUTS_DIR

* beginning of refacto

* add sonar

* add correct sonar

* delete useless logs

* clean

* sonar code smells

* sonar

* First commit

* PostProcessingService tests

* HourlyF303InfoGenerator tests

* DailyF303Generator tests

* F305 file okay

* Modification of some tests after comments

* Add task generator common for tests

* Interval Util tests

* static tasks

* Metadata Csv tests

* Minio File Writer

* File comparator in Utils

* DailyF303Generator tests

* fetchMetadataFromMinio sanity checks tests

* test files content in PostProcessingServiceTest

* delete tmp after test

* various fixes

* add logs content in tests

* fix tests after post_processing merge

* handler tests

* fix tests after resolved merge conflicts

* sonar

* CoreCCPostProcessingHandler tests

* CoreCCPostProcessingHandler tests

* replaced all /tmp occurrences

* check F342 content

* Reactualize unit tests

* Split zip and upload into its own service and add unit tests

* Fix checkstyle issues

* Reduce complexity of test

* Fix generateRaoResponse unit test

* Add mutation testing

* Update branch with master and merge

* Use ReflectionTestUtils to test private methods instead of having them public

* Add copyrights + delete unused boolean

* Add copyright + unit test on IntervalUtilTest on DST days

* Fix checkstyle

---------

Co-authored-by: Philippe Edwards <philippe.edwards@rte-france.com>
Co-authored-by: demontmorillongod <godelaine.demontmorillon@rte-france.com>
Co-authored-by: Thomas Bouquet <thomas.bouquet@rte-france.com>